# 2DPhysicsEngine

./: CMakeLists.txt  README.md  game_logic.cpp  game_logic.h
display_backend/: backend.h  raylib_display_backend.cpp  raylib_display_backend.h
physics/: circleshape2d.cpp  circleshape2d.h  collision_info.h  collision_resolver.cpp  collision_resolver.h  convex_polygon_shape2d.cpp  convex_polygon_shape2d.h  gjk.cpp  gjk.h  matrix3x3.cpp  matrix3x3.h  physicbody.cpp  physicbody.h  rectangleshape2d.cpp  rectangleshape2d.h  rigidbody.cpp  rigidbody.h  shape2d.cpp  shape2d.h  staticbody.cpp  staticbody.h  transform.h  vector2d.cpp  vector2d.h  vector3d.cpp  vector3d.h
